2007-05-25  Simon Martin  <simartin@users.sourceforge.net> 	    Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

PR c++/31745
	* parser.c (cp_parser_skip_to_closing_brace): Return true if the next
	token is a closing brace, false if there are no tokens left.
	(cp_parser_namespace_alias_definition): Only consume the next token if
	it is a closing brace.

	* parser.c (cp_parser_class_specifier): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@125070 138bc75d-0d04-0410-961f-82ee72b054a4