gcc/testsuite/g++.dg/parse/crash34.C
@@ -1,0 +1,6 @@
+/* PR c++/31745 */
+/* { dg-do "compile" }  */
+
+void foo()
+{
+  namespace N { /* { dg-error "is not allowed|at end of input" } */
